# fb2d

./: .gitignore  Cargo.toml  LICENSE  README.md
assets/scene1/: scene.xml
assets/scene2/: scene.xml
examples/: simple_browser.rs  simple_sprite.rs
src/: browser.rs  color.rs  dimension.rs  lib.rs  node.rs  resource.rs  scene.rs  scene_bundle.rs  screen_writer.rs  shape.rs  sprite.rs  text.rs  texture.rs
src/browser/: mod.rs
src/c/: c.rs  mod.rs
