[package]
name = "fb2d"
version = "0.1.0"
authors = ["Mark Berner <mark2b@gmail.com>"]

[lib]
name = "fb2d"
path = "src/lib.rs"

[dependencies]
libc = "0.2.2"
memmap = "0.5.0"
image = "0.18.0"
rusttype = "0.5.2"
xml-rs = "0.7.0"
uuid = { version = "0.6.2",features = ["v4"] }


[[example]]
name = "simple-sprite"
path = "examples/simple_sprite.rs"

[[example]]
name = "simple-browser"
path = "examples/simple_browser.rs"

[features]
simulator=[]


[dev-dependencies]
ctrlc = "3.1.0"